--- a/day-1/day_1.ipynb
+++ b/day-1/day_1.ipynb
@@ -133,7 +133,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## NumPy"
+        "## 1. NumPy"
       ]
     },
     {
@@ -233,7 +233,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## MatPlotLib"
+        "## 2. MatPlotLib"
       ]
     },
     {
@@ -312,21 +312,34 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3lBFW_RFqSvZ",
+        "id": "muFQA39ZqzVF",
         "colab_type": "text"
       },
       "source": [
-        "## Plotly"
+        "### 3D Plots"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d0pzFr1Kq2lp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from mpl_toolkits.mplot3d import Axes3D"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "XJ6Ae8kNqZLu",
+        "id": "3lBFW_RFqSvZ",
         "colab_type": "text"
       },
       "source": [
-        ""
+        "## 3. Plotly"
       ]
     }
   ]
