--- a/day-3/day_3_image_processing.ipynb
+++ b/day-3/day_3_image_processing.ipynb
@@ -411,9 +411,8 @@
     "                    pass\n",
     "    return nbh\n",
     "\n",
-    "connectivity = 8\n",
-    "n_labels, lb_img, _, stats = cv2.connectedComponentsWithStats(thresh, connectivity, cv2.CV_32S)\n",
-    "n_labels_holes, lb_img1, _, stats1 = cv2.connectedComponentsWithStats(thresh1, connectivity, cv2.CV_32S)\n",
+    "n_labels, lb_img, _, stats = cv2.connectedComponentsWithStats(thresh, 8, cv2.CV_32S)\n",
+    "n_labels_holes, lb_img1, _, stats1 = cv2.connectedComponentsWithStats(thresh1, 8, cv2.CV_32S)\n",
     "\n",
     "added = set()\n",
     "circles = n_labels\n",
