--- a/day-5/day_5_robo_location.ipynb
+++ b/day-5/day_5_robo_location.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,8 +50,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Robolocation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1-D"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +91,7 @@
        "[0.2, 0.2, 0.2, 0.2, 0.2]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,33 +101,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.875"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "p[red/red] = 0.75\n",
-    "p[green/red] = 0.25\n",
-    "p[red/green] = 0.25\n",
-    "p[green/green] = 0.75\n",
-    "\n",
-    "p[x/red] = p[red/x]*p[x]/p[red]\n"
+    "## Probability Calculation on Sensing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +118,7 @@
        "array([0.11111111, 0.33333333, 0.33333333, 0.11111111, 0.11111111])"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,6 +132,7 @@
     "world=np.array(['green', 'red', 'red', 'green', 'green'])\n",
     "p = [0.2, 0.2, 0.2, 0.2, 0.2]\n",
     "\n",
+    "# iterative sense\n",
     "probs = {\n",
     "    'red': {\n",
     "        'green':0.25,\n",
@@ -146,8 +143,7 @@
     "        'red':0.25\n",
     "    }\n",
     "}\n",
-    "\n",
-    "def sense(p, Z):\n",
+    "def sense_i(p, Z):\n",
     "    q = np.array([])\n",
     "    p = np.array(p)\n",
     "    # Add your code here\n",
@@ -159,15 +155,15 @@
     "    # End your code here\n",
     "    return q\n",
     "\n",
+    "# vectorized sense\n",
     "def sense(p, Z):\n",
     "    p = np.array(p)\n",
-    "    \n",
-    "        \n",
+    "            \n",
     "    q = p*0 + 0.25\n",
     "    q[world == Z] = 0.75\n",
     "    \n",
     "    q*=p\n",
-    "    q/=sum(q)\n",
+    "    q/=sum(q.flatten())\n",
     "\n",
     "    # End your code here\n",
     "    return q\n",
@@ -177,14 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.04761905 0.42857143 0.42857143 0.04761905 0.04761905]\n"
+      "[0.2 0.2 0.2 0.2 0.2]\n"
      ]
     }
    ],
@@ -209,8 +205,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Movement without Error"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +222,7 @@
        "array([0.11, 0.11, 0.33, 0.33, 0.11])"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,8 +244,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Movement with Uncertainty"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +261,7 @@
        "array([0. , 0.1, 0.8, 0.1, 0. ])"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,17 +283,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Uncertainly moving 1000 times, leading to maximum entropy"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.66, 0.16, 0.01, 0.01, 0.16])"
+       "array([0.2, 0.2, 0.2, 0.2, 0.2])"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,9 +308,182 @@
    "source": [
     "p = np.array([0,1,0,0,0])\n",
     "\n",
-    "for i in range(2):\n",
+    "for i in range(1000):\n",
     "    p = move_uncertain(p, 2)\n",
     "p"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2-D Space Implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initialization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "world = np.array([\n",
+    "    ['green', 'red', 'green'],\n",
+    "    ['green', 'red', 'red'],\n",
+    "    ['red', 'green', 'red']\n",
+    "])\n",
+    "\n",
+    "p = (world=='r').astype('int') + 1/(len(world.flatten()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sensing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.05263158, 0.15789474, 0.05263158],\n",
+       "       [0.05263158, 0.15789474, 0.15789474],\n",
+       "       [0.15789474, 0.05263158, 0.15789474]])"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "measurements = np.array(['red', 'green', 'red'])\n",
+    "for i in measurements:\n",
+    "    p = sense(p, i) #1-D Vectorized sense() will work for 2D too\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Move Certainly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def move(p, U):\n",
+    "    \n",
+    "    p = np.roll(p, U[0], axis=1)\n",
+    "    p = np.roll(p, U[1], axis=0)\n",
+    "    return p\n",
+    "\n",
+    "p = np.array([\n",
+    "    [1,0,0,0,0],\n",
+    "    [0,0,0,0,0],\n",
+    "    [0,0,0,0,0],\n",
+    "    [0,0,0,0,0],\n",
+    "    [0,0,0,0,0]\n",
+    "])\n",
+    "move(p, (1,1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Move Uncertainly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.  , 0.  , 0.  , 0.  , 0.  ],\n",
+       "       [0.  , 0.  , 0.05, 0.  , 0.  ],\n",
+       "       [0.  , 0.05, 0.8 , 0.05, 0.  ],\n",
+       "       [0.  , 0.  , 0.05, 0.  , 0.  ],\n",
+       "       [0.  , 0.  , 0.  , 0.  , 0.  ]])"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Mapping:\n",
+    "o . . . .   \n",
+    ". . . . .   \n",
+    ". . t . .\n",
+    ". . . . .\n",
+    ". . . . .\n",
+    "\n",
+    ".00 .00 .00 .00 .00\n",
+    ".00 .00 .05 .00 .00\n",
+    ".00 .05 .80 .00 .00\n",
+    ".00 .00 .05 .00 .00\n",
+    ".00 .00 .00 .00 .00\n",
+    "'''\n",
+    "\n",
+    "def move_uncertain(p, U):\n",
+    "    \n",
+    "#     q = move(p,U-1)*0.1 + move(p,U)*0.8 + move(p,U+1)*0.1\n",
+    "    \n",
+    "    x,y = U\n",
+    "    n = len(p)\n",
+    "    q = np.zeros((n,n))\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            q[i][j] = p[(i-y)%n][(j-x)%n]*0.8 + p[(i-y-1)%n][(j-x)%n]*0.05 + p[(i-y+1)%n][(j-x)%n]*0.05 + \\\n",
+    "                        p[(i-y)%n][(j-x-1)%n]*0.05 + p[(i-y)%n][(j-x+1)%n]*0.05\n",
+    "    \n",
+    "    return q\n",
+    "\n",
+    "p = np.array([\n",
+    "    [1,0,0,0,0],\n",
+    "    [0,0,0,0,0],\n",
+    "    [0,0,0,0,0],\n",
+    "    [0,0,0,0,0],\n",
+    "    [0,0,0,0,0]\n",
+    "])\n",
+    "move_uncertain(p, (2,2))"
    ]
   },
   {
